--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,9 @@
 Source: python-statsd
 Section: python
 Priority: optional
-Maintainer: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
-Uploaders: Antoine Musso <hashar@free.fr>,
+Maintainer: Pexip AS <packaging@pexip.com>
+XSBC-Pexip-Original-Maintainer: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
+XSBC-Pexip-Original-Uploaders: Antoine Musso <hashar@free.fr>,
  Paul Belanger <paul.belanger@polybeacon.com>
 Build-Depends: debhelper (>= 9), dh-python,
  python-all, python-setuptools, python-nose, python-mock,
@@ -13,6 +14,7 @@ X-Python3-Version: >= 3.2
 Homepage: https://github.com/jsocol/pystatsd/
 Vcs-Git: https://anonscm.debian.org/git/python-modules/packages/python-statsd.git
 Vcs-Browser: https://anonscm.debian.org/cgit/python-modules/packages/python-statsd.git
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ stretch
 
 Package: python-statsd
 Architecture: all
