--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ X-Python3-Version: >= 3.2
 Homepage: https://github.com/jsocol/pystatsd/
 Vcs-Git: https://anonscm.debian.org/git/python-modules/packages/python-statsd.git
 Vcs-Browser: https://anonscm.debian.org/cgit/python-modules/packages/python-statsd.git
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ stretch
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ buster
 
 Package: python-statsd
 Architecture: all
