--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Standards-Version: 4.4.1
 Homepage: https://github.com/jsocol/pystatsd/
 Vcs-Git: https://salsa.debian.org/python-team/modules/python-statsd.git
 Vcs-Browser: https://salsa.debian.org/python-team/modules/python-statsd
-XS-Pexip-Upstream: http://deb.debian.org/debian/ bullseye
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bookworm
 
 Package: python3-statsd
 Architecture: all
