--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist = py27,pypy,py34,py35,py36
+envlist = py37,py38,py39,py310,py311,pypy3
+isolated_build = True
 
 [testenv]
 deps=
-    mock==1.0.1
-    nose==1.2.1
-    coverage==3.5.2
+    nose2
+    coverage
 
 commands=
-    nosetests statsd --with-coverage --cover-package=statsd []
+    nose2 statsd --with-coverage
